--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/bradtraversy/chatcord.git"
+        "url": "https://github.com/DaveLyndrex/SDelectiveFinal.git"
     },
     "author": "Dave Lyndrex Millan",
     "license": "MIT"
