--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Realtime chat bot",
     "main": "server.js",
     "scripts": {
-        "start": "node server",
+        "start": "node server.js",
         "test": "nodemon server"
     },
     "repository": {
